--- a/server/package.json
+++ b/server/package.json
@@ -6,13 +6,14 @@
   "scripts": {
     "test": "jest",
     "build": "rm -rf build/ && tsc",
-    "start": "node build/index.js"
-
+    "start": "node build/index.js",
+    "codegen": "graphql-codegen --config codegen.yml"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@graphql-codegen/cli": "^2.6.2",
     "@shelf/jest-mongodb": "^2.2.1",
     "@typegoose/typegoose": "^9.7.0",
     "apollo-server": "^3.6.4",
@@ -25,13 +26,18 @@
     "express": "^4.17.3",
     "graphql": "^16.3.0",
     "graphql-middleware": "^6.1.17",
+    "install": "^0.13.0",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.6",
+    "npm": "^8.5.5",
     "reflect-metadata": "^0.1.13",
     "type-graphql": "^1.1.1"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "2.6.2",
+    "@graphql-codegen/typescript": "^2.4.8",
+    "@graphql-codegen/typescript-resolvers": "^2.6.1",
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.4.1",
