--- a/client/codegen.yml
+++ b/client/codegen.yml
@@ -1,10 +1,9 @@
-schema: http://localhost:4000/graphql
-documents: ./src/**/*.tsx
+overwrite: true
+schema: "http://localhost:4000"
+documents: null
 generates:
-  ./src/types.ts:
+  src/generated/graphql-client.ts:
     plugins:
-      - typescript
-      - typescript-operations
-    #   - typescript-react-query
-    # config:
-    #   fetcher: fetch
+      - "typescript"
+      - "typescript-operations"
+      - "typescript-react-apollo"
