--- a/client/codegen.yml
+++ b/client/codegen.yml
@@ -1,9 +1,9 @@
 overwrite: true
 schema: "http://localhost:4000"
-documents: null
+documents: './src/**/*.graphql'
 generates:
   src/generated/graphql-client.ts:
     plugins:
-      - "typescript"
-      - "typescript-operations"
-      - "typescript-react-apollo"
+      - typescript
+      - typescript-operations
+      - typed-document-node
