--- a/client/package.json
+++ b/client/package.json
@@ -55,6 +55,7 @@
   "devDependencies": {
     "@graphql-codegen/typescript-operations": "^2.3.5",
     "@graphql-codegen/typescript-react-apollo": "^3.2.11",
+    "@simbathesailor/use-what-changed": "^2.0.0",
     "@types/graphql": "^14.5.0",
     "apollo": "^2.33.9"
   }
