--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@types/node": "^16.11.26",
     "@types/react": "^17.0.40",
     "@types/react-dom": "^17.0.13",
+    "bootstrap": "^5.1.3",
     "formik": "^2.2.9",
     "graphql": "^16.3.0",
     "react": "^17.0.2",
